<resources>
    <string name="app_name">Announcer</string>
    <string name="blog_rss_url">http://studentsblog.sst.edu.sg/feeds/posts/default</string>

    <!-- Service -->
    <string name="event_resource_changed_blog">
        event_resourcechanged_http://studentsblog.sst.edu.sg/feeds/posts/default
    </string>
    <string name="event_resource_service_change_frequency">
        service.resource.set.frequency
    </string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Feed and Entries-->
    <string name="toolbar_all">All Posts</string>
    <string name="entry_by_text">by</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="date_textView_error">ERROR</string>

    <!-- Settings -->
    <string name="toolbar_settings">Settings</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_all_posts">All Posts</string>

    <string name="pref_header_general">Data Usage</string>
    <string name="pref_show_images">show_images</string>
    <string name="pref_title_show_images">Display Images</string>
    <string name="pref_description_show_images">
        Automatically retrieve and load images when viewing each post.
    </string>

    <string name="pref_refresh_rate">refresh_rate</string>
    <string name="pref_title_refresh_rate">Set Refresh Rate</string>
    <string name="pref_description_refresh_rate">
        Change how often Announcer checks for new posts.
    </string>

    <string-array name="pref_refresh_rate_array">
        <item>Never</item>
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>12 Hours</item>
    </string-array>
    <string-array name="pref_refresh_rate_array_values">
        <item>0</item>
        <item>60</item>
        <item>300</item>
        <item>1800</item>
        <item>3600</item>
        <item>43200</item>
    </string-array>
</resources>
